[update] searching items in Elasticsearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+logging.level.org.springframework.data.elasticsearch.core=DEBUG
+logging.level.org.elasticsearch.client=DEBUG
+logging.level.org.apache.http=DEBUG
