--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 logging.level.org.springframework.data.elasticsearch.core=DEBUG
 logging.level.org.elasticsearch.client=DEBUG
 logging.level.org.apache.http=DEBUG
