[update] example data, manually creating the item index

--- a/src/main/resources/elasticsearch/item-mapping.json
+++ b/src/main/resources/elasticsearch/item-mapping.json
@@ -7,6 +7,12 @@
             },
             "description" : {
                 "type" : "text"
+            },
+            "ean13" : {
+                "type" : "long"
+            },
+            "price" : {
+                "type" : "float"
             }
         }
     }
